<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FormPessoa">

    <EditText
        android:id="@+id/editNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editIdade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/idade"
        android:inputType="number" />

    <EditText
        android:id="@+id/editEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/endereco"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/editTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/telefone"
        android:inputType="textPersonName"  />

    <Button
        android:id="@+id/btnVariavel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="New Button" />
</LinearLayout>